[gd_scene load_steps=6 format=3 uid="uid://bpbxl634kt5sd"]

[ext_resource type="Script" uid="uid://bxir423lfn0b" path="res://modules/minigame/wind_platformer/cloud_platform.gd" id="1_f4ja7"]
[ext_resource type="PackedScene" uid="uid://c3djvftk8ecjn" path="res://modules/minigame/wind_platformer/cloud_part.tscn" id="3_k72l2"]
[ext_resource type="Texture2D" uid="uid://bvf514u5cm2d7" path="res://assets/minigames/wind_platformer/full_cloud.png" id="3_us7hx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4ja7"]
size = Vector2(140, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k72l2"]
size = Vector2(300, 150)

[node name="Cloud Platform" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_f4ja7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f4ja7")
one_way_collision = true

[node name="Parts" type="Node2D" parent="."]

[node name="CloudPart" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(-51, 11)

[node name="CloudPart2" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(-49, 1)

[node name="CloudPart3" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(-55, -12)

[node name="CloudPart4" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(-25, -13)

[node name="CloudPart5" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(-23, 1)

[node name="CloudPart6" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(-24, 13)

[node name="CloudPart7" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(6, -12)

[node name="CloudPart8" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(37, -14)

[node name="CloudPart9" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(52, -13)

[node name="CloudPart10" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(9, 4)

[node name="CloudPart11" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(44, 3)

[node name="CloudPart12" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(53, 11)

[node name="CloudPart13" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(17, 14)

[node name="CloudPart14" parent="Parts" instance=ExtResource("3_k72l2")]
position = Vector2(54, 0)

[node name="FullCloud" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.85098)
position = Vector2(0, 1)
scale = Vector2(1.515, 1.515)
texture = ExtResource("3_us7hx")

[node name="Player Detection Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detection Area"]
shape = SubResource("RectangleShape2D_k72l2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-100, -10, 200, 20)

[node name="Label Multiplier 2x" type="Label" parent="."]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.818307, 0.769019, 0, 1)
text = "2x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label Multiplier 5x" type="Label" parent="."]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.819608, 0.360784, 0, 1)
text = "5x"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Player Detection Area" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="Player Detection Area" to="." method="_on_player_detection_area_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
